// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkBackgroundImage should accept userland className 1`] = `
<DocumentFragment>
  <div
    class="userland-classname"
    style="width: 100%; height: 20rem;"
  >
    <div
      class="bpk-background-image bpk-background-image--no-background"
      style="height: 0px; padding-bottom: 66.66666666666667%;"
    >
      <div
        class="bpk-background-image__img bpk-background-image__img--shown"
        style="background-image: url(./path/to/image.jpg);"
      />
      <div
        class="bpk-background-image__content"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkBackgroundImage should have inView behavior 1`] = `
<DocumentFragment>
  <div
    class=""
    style="width: 100%; height: 20rem;"
  >
    <div
      class="bpk-background-image bpk-background-image--no-background"
      style="height: 0px; padding-bottom: 66.66666666666667%;"
    >
      <div
        class="bpk-background-image__img bpk-background-image__img--shown"
        style="width: 100%; height: 100%; background-repeat: no-repeat; background-size: cover; background-position: 50% 50%;"
      />
      <div
        class="bpk-background-image__content"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkBackgroundImage should have loading behavior 1`] = `
<DocumentFragment>
  <div
    class=""
    style="width: 100%; height: 20rem;"
  >
    <div
      class="bpk-background-image"
      style="height: 0px; padding-bottom: 66.66666666666667%;"
    >
      <div
        class="bpk-background-image__img"
        style="width: 100%; height: 100%; background-repeat: no-repeat; background-size: cover; background-position: 50% 50%;"
      />
      <div
        class="bpk-image__spinner"
      >
        <svg
          class="bpk-spinner bpk-spinner--dark"
          height="16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="2"
            opacity=".45"
            rx="1"
            width="4"
            y="7"
          />
          <rect
            height="2"
            rx="1"
            width="4"
            x="12"
            y="7"
          />
          <rect
            height="2"
            opacity=".3"
            rx="1"
            transform="rotate(-90 7 16)"
            width="4"
            x="7"
            y="16"
          />
          <rect
            height="2"
            opacity=".65"
            rx="1"
            transform="rotate(-90 7 4)"
            width="4"
            x="7"
            y="4"
          />
          <rect
            height="2"
            opacity=".25"
            rx="1"
            transform="rotate(-120 11.134 15.428)"
            width="4"
            x="11.134"
            y="15.428"
          />
          <rect
            height="2"
            opacity=".55"
            rx="1"
            transform="rotate(-120 5.134 5.036)"
            width="4"
            x="5.134"
            y="5.036"
          />
          <rect
            height="2"
            opacity=".2"
            rx="1"
            transform="rotate(-150 14.428 12.866)"
            width="4"
            x="14.428"
            y="12.866"
          />
          <rect
            height="2"
            opacity=".5"
            rx="1"
            transform="rotate(-150 4.036 6.866)"
            width="4"
            x="4.036"
            y="6.866"
          />
          <rect
            height="2"
            opacity=".85"
            rx="1"
            transform="rotate(150 15.428 4.866)"
            width="4"
            x="15.428"
            y="4.866"
          />
          <rect
            height="2"
            opacity=".4"
            rx="1"
            transform="rotate(150 5.036 10.866)"
            width="4"
            x="5.036"
            y="10.866"
          />
          <rect
            height="2"
            opacity=".75"
            rx="1"
            transform="rotate(120 12.866 1.572)"
            width="4"
            x="12.866"
            y="1.572"
          />
          <rect
            height="2"
            opacity=".35"
            rx="1"
            transform="rotate(120 6.866 11.964)"
            width="4"
            x="6.866"
            y="11.964"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkBackgroundImage should render correctly 1`] = `
<DocumentFragment>
  <div
    class=""
    style="width: 100%; height: 20rem;"
  >
    <div
      class="bpk-background-image bpk-background-image--no-background"
      style="height: 0px; padding-bottom: 66.66666666666667%;"
    >
      <div
        class="bpk-background-image__img bpk-background-image__img--shown"
        style="background-image: url(./path/to/image.jpg);"
      />
      <div
        class="bpk-background-image__content"
      >
        <div
          style="opacity: 0.7; margin-left: .75rem; padding-top: .75rem;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkBackgroundImage should render correctly when overriding src 1`] = `
<DocumentFragment>
  <div
    class=""
    style="width: 100%; height: 20rem;"
  >
    <div
      class="bpk-background-image bpk-background-image--no-background"
      style="height: 0px; padding-bottom: 66.66666666666667%;"
    >
      <div
        class="bpk-background-image__img bpk-background-image__img--shown"
      />
      <div
        class="bpk-background-image__content"
      >
        <div
          style="opacity: 0.7; margin-left: .75rem; padding-top: .75rem;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
